# tams_lwr

./: .gitignore  .pre-commit-config.yaml  README.md
doc/: run_lwr_with_ros.md
doc/kuka_quick_start_guide/: quick_start_kuka.md
ros_fri/: CMakeLists.txt  package.xml
ros_fri/include/: Console.h  DataLogging.h  Doxygen.h  FastResearchInterface.h  FastResearchInterfaceTest.h  InitializationFileEntry.h  LWRBaseControllerInterface.h  LWRCartImpedanceController.h  LWRJointImpedanceController.h  LWRJointPositionController.h  LinuxAbstraction.h  MACOSAbstraction.h  OSAbstraction.h  QNXAbstraction.h  RMLFlags.h  RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVector.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  ReflexxesAPI.h  WindowsAbstraction.h  friComm.h  friremote.h  friudp.h  friutil.h  ros_fri_hannes.h
ros_fri/launch/: fnh.launch  fnh_fk_test.launch  ros_fri_lwr.launch  ros_fri_remap.launch  ros_fri_roscontrol.launch
ros_fri/scripts/: debug_external_wrench.sh  plot_external_joint_torques.sh  plot_external_wrench.sh  plot_joint_angles  plot_joint_torques.sh  plot_joint_velocities  plot_joint_velocities_and_goals  plot_position_goals  plot_velocity_goal  teachmode  teachmode2
ros_fri/src/: arm_controller.cpp  lwr_grav_comp.cpp  lwr_move_to_candle.cpp  lwr_move_to_startPose.cpp  lwr_movej.cpp  lwr_sinewave.cpp  ros_fri_lwr.cpp  ros_fri_roscontrol.cpp  ros_fri_roscontrol_new.cpp  test_jnt_pos_goal.cpp
ros_fri/src/old/: arm_controller02_06_14.cpp  arm_controller14_06_14.cpp  arm_controller16_05_14.cpp  arm_controller19_05_14.cpp  arm_controller_02_05_14.cpp  arm_controller_08_07_14.cpp  arm_controller_25_06_14.cpp  arm_controller_26_07_14.cpp  arm_controller_28_07_14.cpp  arm_controller_ruckel.cpp  arm_controller_test.cpp  find_kuka_base_transform.cpp  ros_fri_hannes.cpp
ros_fri_msgs/: CMakeLists.txt  package.xml
ros_fri_msgs/msg/: LWRStates.msg  MotionCompletion.msg  RMLPositionInputParameters.msg  RMLVelocityInputParameters.msg  fri_status.msg  rml_velocity_status.msg
tams_lwr/: CMakeLists.txt  package.xml
tams_lwr/config/: 70-persistent-net.rules  980039-FRI-Driver.init  interfaces  limits.conf
tams_lwr/config/apriltag/: tags.yaml
tams_lwr/launch/: azure.launch  bringup.launch  kinect2.launch  lwr_grav_comp.launch  lwr_wsg50_rviz.launch  lwr_wsg50_upload.launch  mechmind.launch  move_group.launch  ros_fri.launch  rviz.launch  wsg50.launch
tams_lwr/nodes/: nano_common.py  nanokontrol.py  nanokontrol_button_feedback.py  nanokontrol_led_demo.py
tams_lwr/scripts/: plot_external_torques.sh  plot_grav_comp_j026.sh  plot_joint_positions.sh  plot_joint_velocities.sh  plot_joint_velocity_goals.sh  plot_velocities_and_goals.sh
tams_lwr/src/: doro_watchdog.cpp  gripper_action_server.cpp  joint_state_merger.cpp  kuka_sphere_object_shape_detection.cpp  kuka_sphere_object_shape_detection_v2.cpp  lwr_nk_teleop.cpp
tams_lwr_description/: CMakeLists.txt  package.xml
tams_lwr_description/meshes/lwr/: COPYRIGHT
tams_lwr_description/urdf/: kuka_lwr_arm.xacro  lwr_gazebo.xacro  lwr_materials.xacro  lwr_util_defs.xacro  util_defs_exact.xacro
tams_lwr_wsg50_description/: CMakeLists.txt  package.xml
tams_lwr_wsg50_description/config/: lwr_wsg50.rviz  webcam_positioner.rviz
tams_lwr_wsg50_description/launch/: vis_robot.launch
tams_lwr_wsg50_description/rviz/: vis_robot.rviz
tams_lwr_wsg50_description/urdf/: experiment_table.xacro  green_table.xacro  ik_marker.xacro  kinect.gazebo.xacro  kinect.xacro  kinect_wallmount.xacro  lwr_controller.yaml  lwr_with_wsg50.xacro  materials.xacro  pseye.xacro  table.xacro  tams_flange.xacro  webcam.urdf.xacro  wsg_50.urdf.xacro  wsg_50_controllers.yaml  wsg_50_dependent_joints.yaml  wsg_50_dsa.xacro  xtion.gazebo.xacro  xtion.urdf.xacro
tams_lwr_wsg50_moveit/: .setup_assistant  CMakeLists.txt  package.xml
tams_lwr_wsg50_moveit/config/: cartesian_limits.yaml  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  lwr_with_wsg50.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  sensors_kinect.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
tams_lwr_wsg50_moveit/launch/: all_planning.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lwr_with_wsg50_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
tams_wsg_50/: set_up_wsg50_on_kukalwr4+.txt
tams_wsg_50/wsg_50/: CMakeLists.txt  package.xml
tams_wsg_50/wsg_50/include/wsg_50/: aux.h  char.h  checksum.h  cmd.h  common.h  functions.h  functions_can.h  interface.h  msg.h  serial.h  tcp.h  udp.h
tams_wsg_50/wsg_50/launch/: wsg_50_can.launch  wsg_50_tcp.launch  wsg_50_tcp_new.launch  wsg_50_tcp_tactile.launch
tams_wsg_50/wsg_50/src/: checksum.cpp  cmd.c  common.cpp  functions_can.cpp  functions_unused.cpp  interface.cpp  main_can.cpp  main_debug.cpp  main_new.cpp  main_tactile.cpp  msg.c  serial.c  tcp.c  udp.c
tams_wsg_50/wsg_50_common/: CMakeLists.txt  package.xml
tams_wsg_50/wsg_50_common/msg/: Cmd.msg  Sensor.msg  Status.msg
tams_wsg_50/wsg_50_simulation/: CMakeLists.txt  package.xml  wsg_50_gr.yaml
tams_wsg_50/wsg_50_simulation/controllers/: wsg_50_gl.yaml  wsg_50_gl_modular.yaml  wsg_50_gl_powerball.yaml  wsg_50_gr_modular.yaml  wsg_50_gr_powerball.yaml
tams_wsg_50/wsg_50_simulation/launch/: wsg_50.launch
tams_wsg_50/wsg_50_simulation/src/: wsg_50_keyboard_teleop.cpp  wsg_50_sim_driver.cpp
tams_wsg_50/wsg_50_simulation/urdf/: wsg_50.urdf  wsg_50.urdf.xacro  wsg_50_dsa.xacro
