<?xml version="1.0"?>
<package>
    <name>ros_fri</name>
    <version>0.1.0</version>
    <description>
        Real-time ROS driver for the KuKA LWR robot arm using the FRI
        library and Reflexxes-TypeII.
        motions for the six-joint PA10 robot arm in real-time.
    </description>
    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/tams_sunrise_ft/tams_sunrise_driver</url> -->

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <author email="hendrich@informatik.uni-hamburg.de">Johannes Liebrecht, Norman Hendrich</author>

    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->

    <buildtool_depend>catkin</buildtool_depend>

    <!--
    <depend package="roslib"/>
    <depend package="laser_geometry"/>
    -->

    <build_depend>roscpp</build_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>ros_fri_msgs</build_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>moveit_ros_planning</build_depend>

    <build_depend>eigen</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>tf2_bullet</build_depend>
    <build_depend>reflexxes_type2</build_depend>
    <build_depend>frilibrary</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>ros_fri_msgs</run_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>tf2_bullet</run_depend>

    <run_depend>moveit_msgs</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>reflexxes_type2</run_depend>
    <run_depend>frilibrary</run_depend>

    <build_depend>controller_manager</build_depend>
    <run_depend>controller_manager</run_depend>
</package>
