<?xml version="1.0"?>
<package>
    <name>ros_fri</name>
    <version>0.1.0</version>
    <description>
        Real-time ROS driver for the KuKA LWR robot arm using the FRI
        library and Reflexxes-TypeII.
        motions for the six-joint PA10 robot arm in real-time.
    </description>
    <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>
    <license>BSD</license>
    <author email="hendrich@informatik.uni-hamburg.de">Johannes Liebrecht, Norman Hendrich</author>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>ros_fri_msgs</build_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>moveit_ros_planning</build_depend>

    <build_depend>eigen</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>reflexxes_type2</build_depend>
    <build_depend>frilibrary</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>ros_fri_msgs</run_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>

    <run_depend>moveit_msgs</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>reflexxes_type2</run_depend>
    <run_depend>frilibrary</run_depend>

    <build_depend>controller_manager</build_depend>
    <run_depend>controller_manager</run_depend>
</package>
