<?xml version="1.0"?>
<package>
  <name>tams_lwr</name>
  <version>0.0.0</version>
  <description>
    A collection of miscellaneous tools and demos for the
    TAMS setup with KuKA LWR and Schunk WSG-50 tactile gripper.
  </description>
  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>
  <license>BSD</license>
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_depend>wsg_50_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>wsg_50_common</run_depend>
  <run_depend>tams_lwr_description</run_depend>
  <run_depend>tams_lwr_wsg50_description</run_depend>
  <run_depend>tams_lwr_wsg50_moveit</run_depend>
</package>
