<?xml version="1.0"?>
<package>
  <name>tams_lwr_wsg50_description</name>
  <version>0.2.0</version>
  <description>
    ROS xacro/urdf model of the TAMS setup with KuKA LWR with Schunk WSG-50 gripper.
  </description>

  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tams_lwr_description</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tams_lwr_description</run_depend>

  <export>
  </export>
</package>
