<?xml version="1.0"?>
<package>
  <name>wsg_50_common</name>
  <version>0.0.1</version>
  <description>ROS messages for the WSG-50 gripper, catkinized</description>

  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>
  <license>BSD</license>
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
